charts-kustomize/home-assistant/netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: home-assistant
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: home-assistant
  ingress:
    - fromCIDR:
        - 192.168.5.1/32
      toPorts:
        - ports:
            - port: "8123"
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            io.kubernetes.pod.namespace: default
        - matchLabels:
            app.kubernetes.io/instance: traefik-default
            io.kubernetes.pod.namespace: default
      toPorts:
        - ports:
            - port: "8123"
  egress:
    - toEntities:
        - all
